v0.4/guides/storage/file-storage.mdx
---
title: "File Storage"
description: "Read and write files across local and S3 disks with the Storage facade."
icon: "folder-open"
---

The `Storage` facade gives you a single API for working with files,
whether they live on the local filesystem or in S3-compatible object storage.
Disks are configured once and selected by name.

## The Storage API

```ts
import Storage from "@bejibun/core/facades/Storage";

await Storage.exists("path/to/file.ext");       // boolean
await Storage.missing("path/to/file.ext");      // boolean
await Storage.get("path/to/file.ext");          // BunFile | S3File
await Storage.put("path/to/file.ext", content);
await Storage.copy("path/to/file.ext", "path/to/copy.ext");
await Storage.move("path/to/file.ext", "path/to/new.ext");
await Storage.delete("path/to/file.ext");
```

| Method                                | Returns                              | Description                      |
| ------------------------------------- | ------------------------------------ | -------------------------------- |
| `exists(path)`                        | `Promise<boolean>`                   | File exists                      |
| `missing(path)`                       | `Promise<boolean>`                   | File does not exist              |
| `get(path)`                           | `Promise<Bun.BunFile \| Bun.S3File>` | Retrieve a file instance         |
| `put(path, content, options?)`        | `Promise<void>`                      | Write a file                     |
| `copy(source, destination, options?)` | `Promise<void>`                      | Copy a file                      |
| `move(source, destination, options?)` | `Promise<void>`                      | Move a file                      |
| `delete(path)`                        | `Promise<any>`                       | Delete a file                    |
| `metadata(path)`                      | `Promise<Stats \| Bun.S3Stats>`      | File metadata and statistics     |
| `size(path)`                          | `Promise<number>`                    | File size in bytes               |
| `mimeType(path)`                      | `Promise<string>`                    | File MIME type                   |
| `lastModified(path)`                  | `Promise<Date>`                      | Last modification date           |
| `disk(name)`                          | builder                              | Select a configured disk         |
| `build(disk)`                         | builder                              | Define an ad-hoc disk at runtime |

## File metadata

Inspect files without reading their contents:

```ts
const metadata = await Storage.metadata("uploads/avatar.png");          // full stats
const size = await Storage.size("uploads/avatar.png");                  // bytes
const mimeType = await Storage.mimeType("uploads/avatar.png");          // e.g. "image/png"
const lastModified = await Storage.lastModified("uploads/avatar.png");  // Date
```

These helpers work on every disk and resolve to the same values across local and S3 storage.

<Note>
    `get()` returns a file instance (`Bun.BunFile` or `Bun.S3File`), not the raw contents.
    Read the contents with `.text()`, `.json()`, or `.arrayBuffer()`:

    ```ts
    const file = await Storage.get("path/to/file.ext");
    const contents = await file.text();
    ```
</Note>

## Disks

Disks are defined in `config/disk.ts`. A `local`, a `public`, and an `s3` disk ship by default:

```ts config/disk.ts
import App from "@bejibun/app";
import DiskDriverEnum from "@bejibun/core/enums/DiskDriverEnum";

const config: Record<string, any> = {
    default: env("FILESYSTEM_DISK", "local"),

    disks: {
        local: {
            driver: DiskDriverEnum.Local,
            root: App.Path.storagePath("app")
        },

        public: {
            driver: DiskDriverEnum.Local,
            root: App.Path.storagePath("app/public"),
            url: `${env(APP_URL)}/storage/public`
        },

        s3: {
            driver: DiskDriverEnum.S3,
            endpoint: env("S3_ENDPOINT"),
            region: env("S3_REGION"),
            bucket: env("S3_BUCKET"),
            access_key_id: env("S3_ACCESS_KEY_ID"),
            secret_access_key: env("S3_SECRET_ACCESS_KEY"),
            url: ""
        }
    }
};

export default config;
```

### Using a specific disk

```ts
await Storage.disk("public").put("avatars/photo.png", content);
await Storage.disk("s3").get("reports/q2.pdf");
```

### Ad-hoc disks

Build a disk on the fly without adding it to the config:

```ts
import App from "@bejibun/app";
import DiskDriverEnum from "@bejibun/core/enums/DiskDriverEnum";

await Storage.build({
    driver: DiskDriverEnum.Local,
    root: App.Path.storagePath("custom")
}).put("file.txt", content);
```

## Drivers

<CardGroup cols={2}>
    <Card title="Local" icon="hard-drive">
        Backed by `Bun.file()` / `Bun.write()`, resolved against the disk's `root`. Requires `root`.
    </Card>
    <Card title="S3" icon="cloud">
        Backed by `Bun.S3Client`. Requires `endpoint`, `access_key_id`, and `secret_access_key`.
        Supports ACLs, storage classes, and multipart options.
    </Card>
</CardGroup>

<Tip>
    The local and S3 drivers share the same method signatures --
    switching a disk from `local` to `s3` requires no code changes, only config.
</Tip>